# VegCover

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-16-vegcover-plan.md
docs/superpowers/specs/: 2026-06-16-vegcover-design.md
src/vegcover/: __init__.py  detector.py  exporter.py  models.py  pipeline.py  stats.py  stitcher.py  vegindex.py
tests/: conftest.py  test_detector.py  test_exporter.py  test_main.py  test_models.py  test_pipeline.py  test_stats.py  test_stitcher.py  test_vegindex.py
