[project]
name = "vegcover"
version = "0.1.0"
description = "Aerial photo stitching and vegetation analysis tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt6>=6.0",
    "opencv-python>=4.10",
    "ultralytics>=8.3",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "pillow>=10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
